Refactor: 필요없는 파라미터 제거